<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name_plain_text" />

    <TextView
        android:id="@+id/textViewApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name_plain_text" />

    <TextView
        android:id="@+id/textViewDividendo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dividendo_plain_text" />

    <TextView
        android:id="@+id/textViewDivisor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/divisor_plain_text" />

    <TextView
        android:id="@+id/textViewParteEntera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/int_plain_text" />

    <TextView
        android:id="@+id/textViewResiduo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/residuo_plain_text" />

    <TextView
        android:id="@+id/textViewNumeroInvertido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_reverse_plain_text" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickSecondActivity"
        android:text="@string/next_button" />

    <Button
        android:id="@+id/buttonMostrarResultados1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/show_result_button" />
</LinearLayout>