<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <EditText
        android:id="@+id/editTextTextNombre2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/first_name_plain_text"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextTextApellido2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/last_name_plain_text"
        android:inputType="text" />

    <TextView
        android:id="@+id/textViewDividendo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dividendo_plain_text" />

    <TextView
        android:id="@+id/textViewDivisor2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/divisor_plain_text" />

    <TextView
        android:id="@+id/textViewNumero2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_plain_text" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickThirdActivity"
        android:text="@string/next_button" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="onClickThirdActivity"
        android:text="@string/close_button_text" />
</LinearLayout>